--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shmulik Hebrew Audio Learning - Support</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 28px;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Shmulik Hebrew Audio Learning - Support</h1>
+
+  <h2>About the App</h2>
+  <p>
+    Shmulik Hebrew Audio Learning is a mobile app designed to help users learn Hebrew through audio lessons. It provides a
+    comprehensive collection of lessons covering various topics, vocabulary, and pronunciation. With its user-friendly
+    interface and interactive exercises, it offers an effective way to improve your Hebrew language skills.
+  </p>
+
+  <h2>Features</h2>
+  <ul>
+    <li>Extensive library of audio lessons</li>
+    <li>Categorized lessons for different proficiency levels</li>
+    <li>Interactive exercises for practice</li>
+    <li>Track your progress and achievements</li>
+    <li>Download lessons for offline learning</li>
+  </ul>
+
+  <h2>Support and Contact</h2>
+  <p>
+    If you encounter any issues or have questions about the app, please feel free to contact our support team.
+  </p>
+  <p>
+    Email: shmuel.k89@gmail.com
+  </p>
+
+  <h2>FAQ</h2>
+  <p>
+    <strong>Q: Can I use the app offline?</strong><br>
+    A: Yes, you can download lessons to your device and use them offline without an internet connection.
+  </p>
+  <p>
+    <strong>Q: How can I track my progress?</strong><br>
+    A: The app automatically tracks your progress and achievements as you complete lessons and exercises. You can view your
+    statistics and accomplishments in the app.
+  </p>
+  <p>
+    <strong>Q: Are there in-app purchases?</strong><br>
+    A: The app offers a free version with limited lessons. You can unlock additional content and features through in-app
+    purchases.
+  </p>
+
+  <footer>
+    <p>&copy; 2023 Shmulik Hebrew Audio Learning. All rights reserved.</p>
+  </footer>
+</body>
+
+</html>
